<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:ignore="MissingConstraints"
    tools:context=".HalamanDaftar">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="400dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/daftar"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextNamaDepan"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:hint="@string/NamaDepan" />

    <EditText
        android:id="@+id/editTextNamaBelakang"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/NamaBelakang" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/BtnDaftar"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        android:text="@string/Daftar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:alpha="0.8"
        android:text="@string/daftarDenganGoogle" />

    <ImageButton
        android:id="@+id/btnLoginGoogle"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_google"
        android:contentDescription="@string/todo" />

</LinearLayout>
